Tela de Login e css dele

--- a/Formularios.html
+++ b/Formularios.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="campo">
-        <label for="DevApp"><strong>de qual lado da aplicação você desenvolve?</strong></label>
+        <label for="DevApp"><strong>De qual lado da aplicação você desenvolve?</strong></label>
        
         <input type="radio" name="App" id="Frontinput">
         <label for="DevApp" value="Front-End" id="Front">Front-End</label>
