atualizaçoes no sitelogin

--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,11 @@
     <title>Login Form</title>
 
     <script src="https://kit.fontawesome.com/1ab94d0eba.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/CssEstudos.css">
+    <link rel="stylesheet" href="CssLogin.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
     
@@ -21,14 +25,16 @@
             <input type="password" placeholder="Password" id="input2">
         </div>
         <div>
-        <button autofocus id="button">Continue</button>
+            <a href="Formularios.html">
+            <input type="submit" id="button" autofocus value="Continue">
+            </a>
         </div>
             <div class="footer">
             <span>or Connect With Social Media</span> 
             </div>
             
-            <div><a href="#" id="F"><i class="fab fa-facebook-square"></i>Sign on Facebook</a></div>
-            <div><a href="#" id="I"><i class="fab fa-instagram-square"></i>Sign on Instagram</a>
+            <div><a href="#" id="F"><i class="fab fa-facebook-f" id="facebook"></i>&nbsp;&nbsp;Sign on Facebook</a></div>
+            <div><a href="#" id="I"><i class="fab fa-instagram">&nbsp;&nbsp;</i>Sign on Instagram</a>
             </div>
             <form>     
     </main>
